--- a/os-labs/os-lab0/task1/CMakeLists.txt
+++ b/os-labs/os-lab0/task1/CMakeLists.txt
@@ -5,11 +5,13 @@ set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -DDEBUG")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG -s")
 
 # Set the project name
-project(TestName) 
+project(Task1) 
 
 include_directories(include)
 # Add the executable
 
-add_executable(TestName
+add_executable(Task1
  src/main.c
- src/functions.c)
+ src/VerifyGuess.c
+ src/GetUserGuess.c
+ src/GenerateRandNumber.c)
