--- a/os-labs/os-lab-3/task5/CMakeLists.txt
+++ b/os-labs/os-lab-3/task5/CMakeLists.txt
@@ -5,11 +5,14 @@ set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -DDEBUG")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG -s")
 
 # Set the project name
-project(TestName) 
+project(task5) 
 
 include_directories(include)
 # Add the executable
 
-add_executable(TestName
+add_executable(task5
  src/main.c
  src/functions.c)
+
+ target_link_libraries(task5
+    ncurses)
