--- a/os-labs/os-lab-5/thread_policies/CMakeLists.txt
+++ b/os-labs/os-lab-5/thread_policies/CMakeLists.txt
@@ -5,11 +5,11 @@ set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -DDEBUG")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG -s")
 
 # Set the project name
-project(task1) 
+project(thread-policies-task_v0) 
 
 include_directories(include)
 # Add the executable
 
-add_executable(task1
- src/main.c
- src/functions.c)
+add_executable(thread-policies-task_v0
+ src/main_v0.c
+ src/functions_v0.c)
